--- a/css/reset.css
+++ b/css/reset.css
@@ -6,7 +6,7 @@
 html, body, div, span, applet, object, iframe, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
+small, strike, strong,tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
@@ -22,6 +22,10 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+sub, sup{
+	position: relative;
+}
+	
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
