--- a/css/style.css
+++ b/css/style.css
@@ -678,10 +678,31 @@
 .port-link{
 	display:flex;
 	justify-content:space-between;
-	padding:10px;
+	padding:20px;
 	background-color:rgba(255,255,255,0.9);
 	position:absolute;
+	left:20px;
+	right:20px;
+	bottom:0;
+	opacity:0;
 	
+}
+.port-icon{
+	display:flex;
+	gap:10px;
+}
+.port-icon span{
+	height:15px;
+	width:15px;
+}
+.portfolia-pic:hover .port-link{
+	bottom:20px;
+	opacity:1;
+	transition:all 0.3s ease;
+	
+}
+.port-link h4{
+	margin-bottom:10px;
 }
 /*------------------portfolia section ends-------------------------------------*/
 
@@ -733,18 +754,23 @@
 	opacity:0;
 	padding:16px;
 	display:flex;
+	
 	justify-content:center;
-	gap:10px;
+	gap:16px;
 	background-color:rgba(255,255,255,0.9);
 	
 }
-.team-pictures:hover .team-pic-app{
-	opacity:1;
-	color:var(--primary);
+.team-pic-app i{
+	color:var(--Secondary);
+}
+.team-pictures:hover .team-pic-app {
+	opacity:1;	
 	padding:20px;
 	font-size:22px;
 }
-
+.team-pic-app i:hover{
+	color:var(--primary);
+}
 
 
 /*========pricing section start===========*/
@@ -880,6 +906,7 @@
 	padding-top:10px;
 	line-height:1.3;
 	padding-left:20px;
+	font-size:13px;
 }
 .contact-details h3{
 	padding-left:20px;
@@ -893,9 +920,40 @@
 	padding:10px;
 }
 .contact1-info{
-	background-color:#A5F1E9;
-	height:250px;
+	box-shadow:0 0 5px #ccc;
+	max-width:100%;
 	margin-top:50px;
+	padding:30px;
+}
+.name-email{
+	width:100%;
+	display:flex;
+	gap:20px;
+}
+.name{
+	width:50%;
+	padding:10px;
+}
+.subject {
+	width:100%;
+	padding:10px;
+	margin-top:20px;
+}
+.text-area{
+	width:100%;
+	padding:10px;
+	margin-top:20px;
+}
+.msg{
+	padding:10px 15px;
+	background-color:var(--primary);
+	color:white;
+	border:none;
+}
+.msg-button{
+	display:flex;
+	justify-content:center;
+	margin-top:14px;
 }
 
 /*==================================contact section end==========================*/
@@ -936,17 +994,30 @@
 /* .last-list .last-col{ */
 	/* padding-left:100px; */
 /* } */
-.last-list div{
-	width:100%;
-	height:40px;
-}
+
 .last-list input{
 	width:75%;
 	height:100%;
+	margin-top: 25px;
+	 border-radius: 20px 0 0 20px;
+	 border:1px solid #ccc;
 }
 .last-list button{
-	width:25%;
+	/* width:25%; */
 	height:100%;
+	padding:10px 20px;
+	position:absolute;
+	top: 25px;
+    right: 40px;
+    border-radius: 20px;
+	border:none;
+	background-color:var(--primary);
+	color:white;
+}
+.text-btn{
+	position:relative;
+	width:100%;
+	height:40px;
 }
 
 /*----------------------------footer section begins-------------------*/
