--- a/css/reset.css
+++ b/css/reset.css
@@ -3,6 +3,9 @@
 	padding:0;
 	box-sizing:border-box;
 }
+html{
+	scroll-behaviour:smooth;
+}
 html, body, div, span, applet, object, iframe, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
