--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,7 @@
 .button {
   display: inline-block;
   background-color: var(--Secondary);
-  padding: 10px 20px;
+  padding: 10px 30px 10px 40px;
 }
 .bnr-button {
   position: relative;
@@ -258,6 +258,7 @@
   background-color: var(--primary);
   padding: 26px;
   color: white;
+  border-radius: 10px;
 }
 .big-box h1 {
   font-size: 32px;
@@ -347,7 +348,10 @@
 .about-content .para1 {
   margin-bottom: 20px;
   font-family: "Raleway", sans-serif;
+  font-size: 18px;
+  color: #635551;
 }
+
 .about-content h1 {
   margin-bottom: 20px;
   font-size: 30px;
@@ -362,7 +366,7 @@
 
 .sub a {
   font-family: "Raleway", sans-serif;
-
+  font-weight: bold;
   text-decoration: none;
   color: black;
   font-size: 18px;
@@ -377,10 +381,12 @@
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   padding-top: 14px;
+  font-size: 14px;
 }
 .sub1 {
   display: flex;
   gap: 20px;
+  padding: 12px;
 }
 /* .sub:hover i{ */
 /* color:white; */
@@ -461,10 +467,11 @@
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
 }
-.section-title h1 {
+.section-title h2 {
   margin-bottom: 20px;
   letter-spacing: 2px;
-  font-size: 30px;
+  font-size: 32px;
+  color: #635551;
 }
 
 .service-items {
@@ -476,18 +483,21 @@
   padding-top: 50px;
   background-color: white;
 }
-.service-items h3 {
-  margin-bottom: 20px;
+.service-items a {
+  margin-bottom: 30px;
   font-family: "Raleway", sans-serif;
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
 }
 .service-items p {
-  margin-bottom: 35px;
+  padding: 20px 0px;
   line-height: 1.3;
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   color: var(--Secondary);
 }
-.service-items:hover h3 {
+.service-items:hover a {
   color: var(--primary);
 }
 .service-items:hover i {
@@ -541,6 +551,7 @@
   width: 100%;
   padding: 150px 20px 20px 20px;
   margin-top: 60px;
+  border-radius: 10px;
 }
 .pic1 {
   background-image: url("../images/values-1.jpg");
@@ -558,6 +569,7 @@
 .pic-content {
   background-color: rgba(255, 255, 255, 0.9);
   padding: 20px;
+  border-radius: 10px;
 }
 .pic-content h3 {
   text-align: center;
@@ -765,6 +777,8 @@
 }
 .team-head h2 {
   margin-bottom: 20px;
+  color: #635551;
+  font-size: 32px;
 }
 .team-head p {
   line-height: 1.4;
@@ -778,7 +792,8 @@
 }
 .team-pictures img {
   width: 100%;
-  object-fit: cover;
+  display: block;
+  border-radius: 10px 10px 0 0;
 }
 .team-name {
   text-align: center;
@@ -802,7 +817,6 @@
   right: 0;
   bottom: 0;
   opacity: 0;
-  /* padding: 16px; */
   display: flex;
   justify-content: center;
   gap: 16px;
@@ -813,8 +827,8 @@
 }
 .team-pictures:hover .team-pic-app {
   opacity: 1;
-  padding: 20px;
-  font-size: 22px;
+  padding: 10px;
+  font-size: 20px;
 }
 .team-pic-app i:hover {
   color: var(--primary);
@@ -889,17 +903,18 @@
 }
 .buy {
   background-color: #f8f8f8;
-  padding: 20px;
+  padding: 30px;
 }
-.buy p {
+.buy a {
   background-color: var(--primary);
   color: white;
-  padding: 10px;
+  padding: 10px 25px;
   text-align: center;
   border-radius: 10px;
   width: 120px;
-  margin-left: 86px;
+
   font-family: "Raleway", sans-serif;
+  text-decoration: none;
 }
 .advance-pic {
   position: relative;
@@ -930,8 +945,10 @@
   font-weight: 400;
 }
 .faq-head h3 {
-  font-size: 30px;
+  color: #635551;
+  font-size: 32px;
 }
+
 .faq-ques {
   margin-top: 70px;
   padding-left: 70px;
@@ -969,28 +986,31 @@
 .contact-head {
   text-align: center;
 }
+.contact-head h2{
+  color: #635551;
+  font-size: 32px;
+}
 .contact-head p {
   padding-top: 20px;
   line-height: 1.3;
 }
 .contact-details {
-  /* position:relative; */
-  /* left:0; */
-  /* top:0;	 */
   display: flex;
-
   margin-top: 50px;
   padding: 30px;
-  box-shadow: 0 0 5px #ccc;
+  box-shadow: 0 0 15px #ccc;
 }
 .contact-details p {
   padding-top: 10px;
-  line-height: 1.3;
+  line-height: 1.4;
   padding-left: 20px;
   font-size: 13px;
+  color: var(--Secondary);
 }
 .contact-details h3 {
   padding-left: 20px;
+  color: #656262;
+  font-family: "Raleway", sans-serif;
 }
 .contact-details i {
   /* position:absolute; */
@@ -1119,7 +1139,7 @@
 
 /*----------------------------footer section begins-------------------*/
 .footer {
-  margin-top: 50px;
+  padding: 30px 0px;
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
 }
@@ -1127,7 +1147,9 @@
   padding-top: 10px;
 }
 .footer-icon {
-  padding-left: 40px;
+  display: flex;
+  justify-content: end;
+  gap: 10px;
 }
 .footer .color {
   color: var(--primary);
@@ -1143,6 +1165,6 @@
   text-align: center;
   line-height: 35px;
 }
-.bold {
-  font-style: bold;
+.phone {
+  font-weight: bold;
 }
