--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@
 }
 .contact-info {
   color: white;
-  padding-top: 14px;
+  padding-top: 10px;
   font-size: 15px;
   font-family: "Open Sans", sans-serif;
 }
@@ -789,6 +789,7 @@
   padding-bottom: 20px;
   border-radius: 10px;
   box-shadow: 0 0 5px #ccc;
+  background-color: white;
 }
 .team-pictures img {
   width: 100%;
@@ -858,6 +859,7 @@
   margin-top: 70px;
   margin-bottom: 20px;
   border-radius: 5px;
+  background-color: white;
 }
 .content h3 {
   background-color: #f8f8f8;
@@ -869,6 +871,7 @@
 }
 .content {
   text-align: center;
+  background-color: white;
 }
 .num2 {
   color: var(--primary);
@@ -1153,6 +1156,7 @@
 }
 .footer .color {
   color: var(--primary);
+  font-weight: bold;
 }
 .footer-icon .fa {
   color: white;
